--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -14,7 +14,7 @@ block content
 						//==== single block ===
 						.gradient-box.gradient-box--special
 							.gradient-box__icon
-								img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
+								img.lazy(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
 							.gradient-box__content.fly-center
 								
 								.gradient-box__text
@@ -31,7 +31,7 @@ block content
 						//==== single block ===
 						.gradient-box.gradient-box--special
 							.gradient-box__icon
-								img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
+								img.lazy(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
 							.gradient-box__content.fly-center
 								.gradient-box__text
 									.body-3 Парламент Республики Северная Осетия-Алания
