--- a/src/pug/sections/_documents-page.pug
+++ b/src/pug/sections/_documents-page.pug
@@ -56,14 +56,14 @@
 					.double-block
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Пригородный район
 							span .pdf
 							svg.svg-downl
 								use(href="./img/spriteSvg.svg#svg-downl")
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Ирафский район
 							span .pdf
 							svg.svg-downl
@@ -71,14 +71,14 @@
 
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Дигорский район
 							span .pdf
 							svg.svg-downl
 								use(href="./img/spriteSvg.svg#svg-downl")
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Моздокский район
 							span .pdf
 							svg.svg-downl
@@ -86,14 +86,14 @@
 
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Ардонский район
 							span .pdf
 							svg.svg-downl
 								use(href="./img/spriteSvg.svg#svg-downl")
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Кировский район
 							span .pdf
 							svg.svg-downl
@@ -101,21 +101,21 @@
 
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Владикавказ
 							span .pdf
 							svg.svg-downl
 								use(href="./img/spriteSvg.svg#svg-downl")
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Правобережный район
 							span .pdf
 							svg.svg-downl
 								use(href="./img/spriteSvg.svg#svg-downl")
 						//=====card======
 						a(href="#!").download-card
-							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 							p Алагирский район
 							span .pdf
 							svg.svg-downl
