--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -3,7 +3,7 @@ footer.footer#footer
 	.footer-top
 		.footer-logo
 			a(href="index.html").logo.fly-center
-				img(src="./img/logo.webp", width="75" height="75" alt="logo")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="logo")
 				p Инвестиционный<br> портал РСО&#8209;Алания
 			.btn-wrapper
 				button(type="button" frame-btn="modal-subscribe").btn-accent
@@ -116,15 +116,15 @@ footer.footer#footer
 		.social-group.fly-center
 			//=== single item ===
 			a(href="#!").social-group__item.fl-center
-				img(src="./img/icons/vk.webp", width="23" alt="img")
+				img.lazy(src="./img/icons/vk.webp", width="23" alt="img")
 
 			//=== single item ===
 			a(href="#!").social-group__item.fl-center
-				img(src="./img/icons/tg.webp", width="19" alt="img")
+				img.lazy(src="./img/icons/tg.webp", width="19" alt="img")
 
 			//=== single item ===
 			a(href="#!").social-group__item.fl-center
-				img(src="./img/icons/rutube.webp", width="19" alt="img")
+				img.lazy(src="./img/icons/rutube.webp", width="19" alt="img")
 	
 	
 	//======== footer bottom =============
