--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -2,13 +2,13 @@ header.header.header-slider-wrapper
 	.header-slider.owl-carousel
 		.header-slider__item.fly-center
 			.header-slider__img
-				img(src="./img/header-bg1.webp", alt="")
+				img.lazy(src="./img/header-bg1.webp", alt="")
 			.gradient-box.mb-30
 				.h1 Инвестиционный портал <br> РСО-Алания
 			
 		.header-slider__item.fly-center
 			.header-slider__img
-				img(src="./img/header-bg11.webp", alt="")
+				img.lazy(src="./img/header-bg1.webp", alt="")
 			.gradient-block
 				.gradient-box.mb-30
 					.h2 Поддержка инвестиционной деятельности в регионе
@@ -17,7 +17,7 @@ header.header.header-slider-wrapper
 					.gradient-box.gradient-box--special
 						.gradient-box__content.fly-center
 							.gradient-box__icon.fl-center
-								img(src="./img/icons/target.svg", width="56" height="56" alt="alt")
+								img.lazy(src="./img/icons/target.svg", width="56" height="56" alt="alt")
 
 							.body-3 Корпорация развития - «одно окно» для инвесторов
 					+header-slider('icon2', 'Более 600 площадок для размещения производства')
