--- a/src/pug/sections/_invest-projects.pug
+++ b/src/pug/sections/_invest-projects.pug
@@ -10,7 +10,7 @@ section.invest-projects
 					//===============
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «А.РАЙМОНД РУС»(Франция)
 							a(href="#!").project-card__link
@@ -19,7 +19,7 @@ section.invest-projects
 					//==================
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p РБПИ ГРУПП (Норвегия)
 							a(href="#!").project-card__link
@@ -29,7 +29,7 @@ section.invest-projects
 					//===============
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p Бохимический холдинг «ОРГХИМ»(Россия)
 							a(href="#!").project-card__link
@@ -38,7 +38,7 @@ section.invest-projects
 					//==================
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «ГРАНД-НН»(Россия)
 							a(href="#!").project-card__link
@@ -48,7 +48,7 @@ section.invest-projects
 					//===============
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «ХОМА АДГЕЗИВ»(Россия)
 							a(href="#!").project-card__link
@@ -57,7 +57,7 @@ section.invest-projects
 					//==================
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «Ателье Гончарова»(Россия)
 							a(href="#!").project-card__link
@@ -67,7 +67,7 @@ section.invest-projects
 					//===============
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «А.РАЙМОНД РУС»(Франция)
 							a(href="#!").project-card__link
@@ -76,7 +76,7 @@ section.invest-projects
 					//==================
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «А.РАЙМОНД РУС»(Франция)
 							a(href="#!").project-card__link
@@ -86,7 +86,7 @@ section.invest-projects
 					//===============
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «А.РАЙМОНД РУС»(Франция)
 							a(href="#!").project-card__link
@@ -95,7 +95,7 @@ section.invest-projects
 					//==================
 					.project-card
 						.project-card__img
-							img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+							img.lazy(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
 						.project-card__footer.fly-center
 							p ООО «А.РАЙМОНД РУС»(Франция)
 							a(href="#!").project-card__link
@@ -108,7 +108,7 @@ section.invest-projects
 				//=== single-slide ====
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «А.РАЙМОНД РУС»(Франция)
 						a(href="#!").project-card__link
@@ -117,7 +117,7 @@ section.invest-projects
 				//==================
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p РБПИ ГРУПП (Норвегия)
 						a(href="#!").project-card__link
@@ -127,7 +127,7 @@ section.invest-projects
 				//===============
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p Бохимический холдинг «ОРГХИМ»(Россия)
 						a(href="#!").project-card__link
@@ -136,7 +136,7 @@ section.invest-projects
 				//==================
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «ГРАНД-НН»(Россия)
 						a(href="#!").project-card__link
@@ -146,7 +146,7 @@ section.invest-projects
 				//===============
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «ХОМА АДГЕЗИВ»(Россия)
 						a(href="#!").project-card__link
@@ -155,7 +155,7 @@ section.invest-projects
 				//==================
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «Ателье Гончарова»(Россия)
 						a(href="#!").project-card__link
@@ -165,7 +165,7 @@ section.invest-projects
 				//===============
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «А.РАЙМОНД РУС»(Франция)
 						a(href="#!").project-card__link
@@ -174,7 +174,7 @@ section.invest-projects
 				//==================
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «А.РАЙМОНД РУС»(Франция)
 						a(href="#!").project-card__link
@@ -184,7 +184,7 @@ section.invest-projects
 				//===============
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «А.РАЙМОНД РУС»(Франция)
 						a(href="#!").project-card__link
@@ -193,7 +193,7 @@ section.invest-projects
 				//==================
 				.project-card
 					.project-card__img
-						img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+						img.lazy(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
 					.project-card__footer.fly-center
 						p ООО «А.РАЙМОНД РУС»(Франция)
 						a(href="#!").project-card__link
