--- a/src/pug/sections/_main-menu.pug
+++ b/src/pug/sections/_main-menu.pug
@@ -3,7 +3,7 @@
 	.main-menu
 		.main-menu-logo
 			a(href="index.html").logo.fly-center
-				img(src="./img/logo.webp", width="75" height="75" alt="logo")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="logo")
 				p Инвестиционный портал РСО&#8209;Алания
 			//===burger for mob menu ===
 			.menu-toggle#menu-toggle
@@ -73,15 +73,15 @@
 					.social-group.fly-center
 						//=== single item ===
 						a(href="#!").social-group__item.fl-center
-							img(src="./img/icons/vk.webp", width="23" alt="img")
+							img.lazy(src="./img/icons/vk.webp", width="23" alt="img")
 
 						//=== single item ===
 						a(href="#!").social-group__item.fl-center
-							img(src="./img/icons/tg.webp", width="19" alt="img")
+							img.lazy(src="./img/icons/tg.webp", width="19" alt="img")
 
 						//=== single item ===
 						a(href="#!").social-group__item.fl-center
-							img(src="./img/icons/rutube.webp", width="19" alt="img")
+							img.lazy(src="./img/icons/rutube.webp", width="19" alt="img")
 
 					
 					.lang-group.fly-center
