--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -19,7 +19,7 @@ section.news
 								use(href="./img/spriteSvg.svg#svg-link")
 				
 				.news-slider__img
-					img(src="./img/news-slider.webp", width="950" alt="img")
+					img.lazy(src="./img/news-slider.webp", width="950" alt="img")
 					
 					//======= кнопка отображается на десктоп версии =======
 					.btn-wrapper
@@ -45,7 +45,7 @@ section.news
 								use(href="./img/spriteSvg.svg#svg-link")
 				
 				.news-slider__img
-					img(src="./img/header-bg11.webp", width="950" alt="img")
+					img.lazy(src="./img/header-bg11.webp", width="950" alt="img")
 					.btn-wrapper
 						a(href="#!").btn-outline
 							span К новостям
@@ -71,7 +71,7 @@ section.news
 									use(href="./img/spriteSvg.svg#svg-link")
 					
 					.news-slider__img
-						img(src="./img/news-slider.webp", width="950" alt="img")
+						img.lazy(src="./img/news-slider.webp", width="950" alt="img")
 						.btn-wrapper
 							a(href="#!").btn-outline
 								span К новостям
