--- a/src/pug/sections/_support.pug
+++ b/src/pug/sections/_support.pug
@@ -4,45 +4,45 @@ article.support
 		.double-block
 			//====single card =====
 			.light-card
-				img(src="./img/logo.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card
-				img(src="./img/veb.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/veb.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card
-				img(src="./img/logo.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card
-				img(src="./img/logo 3.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo 3.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card
-				img(src="./img/logo.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card
-				img(src="./img/logo 4.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo 4.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card.fly-center
-				img(src="./img/logo 5.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo 5.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card.fly-center
-				img(src="./img/logo.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card.fly-center
-				img(src="./img/logo.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card.fly-center
-				img(src="./img/logo 6.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo 6.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
 			.light-card.fly-center
-				img(src="./img/logo 7.webp", width="75" height="75" alt="img")
+				img.lazy(src="./img/logo 7.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
