--- a/src/pug/sections/_team.pug
+++ b/src/pug/sections/_team.pug
@@ -21,7 +21,7 @@ article.team
 						.body-6 Команда региона
 					
 					.foto-card__pic
-						img(src="./img/team.webp", width="339" height="448" alt="foto")
+						img.lazy(src="./img/team.webp", width="339" height="448" alt="foto")
 
 				.team-slide.foto-card
 					.foto-card__text.fl-column
@@ -31,7 +31,7 @@ article.team
 						.body-6 Команда региона
 					
 					.foto-card__pic
-						img(src="https://i.postimg.cc/43Tv1zSx/image.png", width="339" height="448" alt="foto")
+						img.lazy(src="https://i.postimg.cc/43Tv1zSx/image.png", width="339" height="448" alt="foto")
 				.team-slide.foto-card
 					.foto-card__text.fl-column
 						.txt-semi Цаллагов Александр Сосланович
@@ -40,4 +40,4 @@ article.team
 						.body-6 Команда региона
 					
 					.foto-card__pic
-						img(src="./img/team.webp", width="339" height="448" alt="foto")
+						img.lazy(src="./img/team.webp", width="339" height="448" alt="foto")
