--- a/src/pug/ui/header-slider.pug
+++ b/src/pug/ui/header-slider.pug
@@ -69,7 +69,7 @@ html(lang="ru")
 									.gradient-box.gradient-box--special
 										.gradient-box__content.fly-center
 											.gradient-box__icon.fl-center
-												img(src="../img/icons/target.svg", width="56" height="56" alt="alt")
+												img.lazy(src="../img/icons/target.svg", width="56" height="56" alt="alt")
 
 											.body-3 Корпорация развития - «одно окно» для инвесторов
 									+header-slider('target', 'Корпорация развития - «одно окно» для инвесторов')
