--- a/src/pug/layouts/layout-calc.pug
+++ b/src/pug/layouts/layout-calc.pug
@@ -13,10 +13,21 @@ html(lang="ru")
 		//=======убрать перевод цифр в номер телефона на ios  и safari ======
 		meta(name="format-detection" content="telephone=no")
 		
-		//- link(rel="stylesheet", href="./fonts/fonts.css")
-
+		//==== favicon ===============
+		link(rel='apple-touch-icon' sizes='144x144' href='./img/favicon/apple-touch-icon.png')
+		link(rel='icon' type='image/png' sizes='32x32' href='./img/favicon/favicon-32x32.png')
+		link(rel='icon' type='image/png' sizes='16x16' href='./img/favicon/favicon-16x16.png')
+		link(rel='manifest' href='./img/favicon/site.webmanifest')
+		link(rel='mask-icon' href='./img/favicon/safari-pinned-tab.svg' color='#5bbad5')
+		link(rel='shortcut icon' href='./img/favicon/favicon.ico')
+		meta(name='msapplication-TileColor' content='#da532c')
+		meta(name='msapplication-config' content='./img/favicon/browserconfig.xml')
+		meta(name='theme-color' content='#ffffff')
+		
 		//==== owl carousel ========
 		link(rel="stylesheet", href="./libs/owlCarousel/owl.carousel.min.css")
+		
+	
 		
 		link(rel="stylesheet", href="./css/main.css")
 		
@@ -70,6 +81,9 @@ html(lang="ru")
 				use(href="./img/spriteSvg.svg#svg-left")
 		//=============== jquery ===================
 		script(src="./libs/jquery/jquery-3.0.0.min.js")
+		
+		//=============== lazy  ===================
+		script(src="./libs/lazy/jquery.lazy.min.js")
 		
 		//=============== owl.carousel ===================
 		script(src="./libs/owlCarousel/owl.carousel.min.js")
