--- a/src/pug/mixins/_cards.pug
+++ b/src/pug/mixins/_cards.pug
@@ -1,14 +1,14 @@
 mixin download-card(text, type)
 	if type
 		a(href="#!").download-card
-			img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+			img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 			p #{text}
 			span .pdf
 			svg.svg-downl
 				use(href="./img/spriteSvg.svg#svg-downl")
 	else
 		a(href="#!").download-card
-			img(src="./img/icons/doc.webp", width="62" height="62" alt="img")
+			img.lazy(src="./img/icons/doc.webp", width="62" height="62" alt="img")
 			p #{text}
 			span .doc
 			svg.svg-downl
@@ -31,4 +31,4 @@ mixin foto-card(text1, text2, img)
 			.body-6 Смотреть проект
 		
 		.foto-card__pic
-			img(src="./img/"+ img +".webp", width="325" height="289" alt="foto")
+			img.lazy(src="./img/"+ img +".webp", width="325" height="289" alt="foto")
