--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -1,13 +1,13 @@
 .contacts
 	.contacts-map
-		//- script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad1a82fca4d043f1c7b02a8a3db63ec2e0758c82623b0bb9edd7386892cdbc75a&lang=ru_RU&scroll=false' )
+		script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad1a82fca4d043f1c7b02a8a3db63ec2e0758c82623b0bb9edd7386892cdbc75a&lang=ru_RU&scroll=false' )
 	section.contacts-content
 		.container
 		
 			form(action="").fl-column-20.contacts-form
 				.main-menu-logo
 					a(href="index.html").logo.fly-center
-						img(src="./img/form-logo.webp", width="75" height="75" alt="logo")
+						img.lazy(src="./img/form-logo.webp", width="75" height="75" alt="logo")
 						p Инвестиционный портал РСО&#8209;Алания
 				
 				.title-24 Форма обратной связи
