--- a/src/pug/sections/_economics.pug
+++ b/src/pug/sections/_economics.pug
@@ -4,14 +4,14 @@ article.regional-economics
 		.double-block
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Пригородный район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Ирафский район
 				span .pdf
 				svg.svg-downl
@@ -19,14 +19,14 @@ article.regional-economics
 
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Дигорский район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Моздокский район
 				span .pdf
 				svg.svg-downl
@@ -34,14 +34,14 @@ article.regional-economics
 
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Ардонский район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Кировский район
 				span .pdf
 				svg.svg-downl
@@ -49,21 +49,21 @@ article.regional-economics
 
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Владикавказ
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Правобережный район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Алагирский район
 				span .pdf
 				svg.svg-downl
