--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -11,25 +11,25 @@ section.content-page.body-3
 			.product-fotorama
 				.fotorama(data-nav='thumbs')
 					a(href='./img/fotorama/product1-big.webp' )
-						img(src='./img/fotorama/product1-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product1-thumb.webp' width="157" height="94")
 					
 					a(href='./img/fotorama/product2-big.webp' )
-						img(src='./img/fotorama/product2-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product2-thumb.webp' width="157" height="94")
 
 					a(href='./img/fotorama/product3-big.webp' )
-						img(src='./img/fotorama/product3-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product3-thumb.webp' width="157" height="94")
 					
 					a(href='./img/fotorama/product4-big.webp' )
-						img(src='./img/fotorama/product4-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product4-thumb.webp' width="157" height="94")
 
 					a(href='./img/fotorama/product5-big.webp' )
-						img(src='./img/fotorama/product5-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product5-thumb.webp' width="157" height="94")
 					
 					a(href='./img/fotorama/product6-big.webp' )
-						img(src='./img/fotorama/product6-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product6-thumb.webp' width="157" height="94")
 
 					a(href='./img/fotorama/product7-big.webp' )
-						img(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
+						img.lazy(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
 
 			p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
 
@@ -46,7 +46,7 @@ section.content-page.body-3
 			p Логистическое направление реализуется совместно со Сбербанк лизинг. Планируется закупить до 20 автомобилей грузоподъемностью от 1 до 10т.
 			.video
 				.video-poster
-					img(src="./img/video.webp", alt="img")
+					img.lazy(src="./img/video.webp", alt="img")
 				
 				//====== что бы коректно проигрывалось видео, должна быть в конце адреса приписка enablejsapi=1  ===========
 				iframe(id="ytPlayer" src="https://www.youtube.com/embed/_lTkZNK_yyM?enablejsapi=1" 	frameborder="0")
