--- a/src/pug/sections/_invest-commissioners.pug
+++ b/src/pug/sections/_invest-commissioners.pug
@@ -17,14 +17,14 @@ article.invest-commissioners
 		.single-column
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Распоряжение Правительства Нижегородской области от 29.03.2019 № 264-р «Об инвестиционных уполномоченных в Нижегородской области»
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
 			a(href="#!").download-card
-				img(src="./img/icons/doc.webp", width="62" height="62" alt="img")
+				img.lazy(src="./img/icons/doc.webp", width="62" height="62" alt="img")
 				p Список инвестиционных уполномоченных Нижегородской области
 				span .doc
 				svg.svg-downl
