--- a/src/pug/sections/_supervisory.pug
+++ b/src/pug/sections/_supervisory.pug
@@ -1,7 +1,7 @@
 article.supervisory
 	.container
 		.h3 Контрольно-надзорная деятельность
-		img(src="./img/control-bg.webp", width="1120" height="640"  alt="img")
+		img.lazy(src="./img/control-bg.webp", width="1120" height="640"  alt="img")
 		p Нижегородская область входит в число регионов-лидеров по реформе контрольно-надзорной деятельности (КНД), одна из целей которой – снижение административной нагрузки на бизнес:
 		ul
 			li Внедрение риск-ориентированного подхода к деятельности контрольных органов и развитие профилактики правонарушений
@@ -15,7 +15,7 @@ article.special-project
 		.h3 Особая экономическая зона промышленно-производственного типа «Кулибин»
 		
 		.special-project__block.fl-block 
-			img(src="./img/image-bg.webp", width="545" height="348"  alt="img")
+			img.lazy(src="./img/image-bg.webp", width="545" height="348"  alt="img")
 			
 			.single-column
 				//===info card ====
