--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -135,7 +135,7 @@ html(lang="ru")
 									.body-6 Команда региона
 								
 								.foto-card__pic
-									img(src="../img/team.webp", width="339" height="448" alt="foto")
+									img.lazy(src="../img/team.webp", width="339" height="448" alt="foto")
 							pre.
 								.team-slide.foto-card
 									.foto-card__text.fl-column
@@ -145,17 +145,17 @@ html(lang="ru")
 										.body-6 Команда региона
 									
 									.foto-card__pic
-										img(src="./img/team.webp", width="339" height="448" alt="foto")
+										img.lazy(src="./img/team.webp", width="339" height="448" alt="foto")
 						li
 							a(href="#!").download-card
-								img(src="../img/icons/pdf.webp", width="62" height="62" alt="img")
+								img.lazy(src="../img/icons/pdf.webp", width="62" height="62" alt="img")
 								p Пригородный район
 								span .pdf
 								svg.svg-downl
 									use(href="../img/spriteSvg.svg#svg-downl")
 							pre.
 								a(href="#!").download-card
-									img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+									img.lazy(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 									p Пригородный район
 									span .pdf
 									svg.svg-downl
