--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -27,6 +27,7 @@ section.news
 							span К новостям
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
+			
 			//===== single slide ====
 			.news-slide.fl-block
 				.news-slider__text.fl-column
@@ -52,28 +53,79 @@ section.news
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
 
-			.news-slider.owl-carousel
-				//===== single slide ====
-				.news-slide.fl-block
-					.news-slider__text.fl-column
-						
-						.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
-						
-						.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
-						
-						a(href="").link-medium Смотреть новость
-
-						//======= кнопка отображается на моб версии =======
-						.btn-wrapper
-							a(href="#!").btn-outline
-								span К новостям
-								svg.svg-link
-									use(href="./img/spriteSvg.svg#svg-link")
+			
+			//===== single slide ====
+			.news-slide.fl-block
+				.news-slider__text.fl-column
 					
-					.news-slider__img
-						img.lazy(src="./img/news-slider.webp", width="950" alt="img")
-						.btn-wrapper
-							a(href="#!").btn-outline
-								span К новостям
-								svg.svg-link
-									use(href="./img/spriteSvg.svg#svg-link")
+					.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
+					
+					.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
+					
+					a(href="").link-medium Смотреть новость
+
+					//======= кнопка отображается на моб версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				
+				.news-slider__img
+					img.lazy(src="./img/news-slider.webp", width="950" alt="img")
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+		
+			//===== single slide ====
+			.news-slide.fl-block
+				.news-slider__text.fl-column
+					.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
+					
+					.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
+					
+					a(href="").link-medium Смотреть новость
+					
+					//======= кнопка отображается на моб версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				
+				.news-slider__img
+					img.lazy(src="./img/news-slider.webp", width="950" alt="img")
+					
+					//======= кнопка отображается на десктоп версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+			
+			//===== single slide ====
+			.news-slide.fl-block
+				.news-slider__text.fl-column
+					
+					.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
+					
+					.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
+					
+					a(href="").link-medium Смотреть новость
+					
+					//======= кнопка отображается на моб версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				
+				.news-slider__img
+					img.lazy(src="./img/header-bg11.webp", width="950" alt="img")
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
