--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -9,6 +9,9 @@
 		}
 		@media(max-width:1919px) {
 			width: calc(50% + 50vw);
+			.news-slider__text{
+				padding-right: 15px;
+			}
 		}
 	}
 	.h2{
