--- a/src/pug/sections/_partnership.pug
+++ b/src/pug/sections/_partnership.pug
@@ -3,12 +3,12 @@
 		.container
 			ul#sticky-menu
 				li
-					a(href="#partnership-block").active Государственно-частное партнерство
+					a(href="#partnership-block").active Государственно&#8209;частное партнерство
 				li
-					a(href="#projects-showcase") Витрина ГЧП-проектов
+					a(href="#projects-showcase") Витрина ГЧП&#8209;проектов
 
 				li
-					a(href="#normative") Нормативно-правовые акты
+					a(href="#normative") Нормативно&#8209;правовые акты
 
 	section.partnership
 		article.partnership-block.sticky-menu-section#partnership-block
