--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -9,7 +9,7 @@
 				li
 					a(href="#invest-catalogy") Проекты для инвестирования
 				li
-					a(href="#aplication") Заявка на сопровождение инвестиционного проекта
+					a(href="#aplication") Заявка&nbsp;на&nbsp;сопровождение инвестиционного&nbsp;проекта
 
 	section.projects
 		//===== Истории успеха ======
